# wifimap

./: Cargo.toml  rustfmt.toml
migrations/2021-09-04-192120_create_locations/: down.sql  up.sql
migrations/2021-09-04-192707_create_networks/: down.sql  up.sql
migrations/2021-09-04-192908_create_network_scans/: down.sql  up.sql
migrations/2021-09-27-014347_add_altitude_to_locations/: up.sql
src/: error.rs  gps.rs  lib.rs  main.rs  wifi.rs
src/db/: mod.rs  models.rs  schema.rs
