[package]
name = "wifimap"
version = "0.1.0"
authors = ["Cassaundra <cass@cassaundra.io>"]
edition = "2018"

[dependencies]
chrono = "0.4"
csv = "1.1"
diesel = { version = "1.4", features = ["sqlite"] }
futures = { version = "0.3", features = ["compat", "io-compat"] }
geo-types = "0.4.3" # specific version for gpx
geoutils = "0.4"
gpsd_proto = "0.7"
gpx = "0.8"
lazy_static = "1.4"
macaddr = { version = "1.0", features = ["serde"] }
regex = "1.5"
rustyline = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.9"
structopt = { version = "0.3", optional = true }
thiserror = "1.0"
tokio = { version = "1.5.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.6", features = ["codec"] }

env_logger = "0.8"
log = "0.4"

[features]
binary = ["structopt"]

[lib]
name = "wifimap"
path = "src/lib.rs"
test = true

[[bin]]
name = "wmscan"
path = "src/bin/scan.rs"
required-features = ["binary"]